[package]
name = "blockpipe"
version = "0.1.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.5"
dotenv = "0.15"
log = { version = "0.4", features = ["release_max_level_info"] }
tokio-postgres = "0.7"
simple-signal = "1.1"
stderrlog = "0.5"
tokio = "1.19"
web3 = "0.18"
